jivosite z-index; fix footer

--- a/src/assets/less/_important.less
+++ b/src/assets/less/_important.less
@@ -345,6 +345,10 @@ button {
     }
   }
 }
+.globalClass_ET {
+  position: fixed;
+  z-index: 9;
+}
 
 .grecaptcha-badge {
   visibility: hidden;
